<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.epicodus.getfit.ui.CalorieIntake">

    <TextView
        android:id="@+id/userInputInformation"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="117dp"
        tools:layout_editor_absoluteY="52dp" />

    <EditText
        android:id="@+id/userAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/userWeight"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="54dp"
        android:ems="10"
        android:hint="@string/enter_your_age"
        android:inputType="number"
        android:textAlignment="center"
        android:textColorLink="@android:color/black" />

    <EditText
        android:id="@+id/userWeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/findDailyCalorieButton"
        android:layout_alignLeft="@+id/userAge"
        android:layout_alignStart="@+id/userAge"
        android:layout_marginBottom="32dp"
        android:layout_marginLeft="7dp"
        android:layout_marginStart="7dp"
        android:ems="10"
        android:hint="@string/enter_your_weight_in_lbs"
        android:inputType="number"
        android:textAlignment="center"
        android:textColorLink="@android:color/black" />

    <Button
        android:id="@+id/findDailyCalorieButton"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@android:color/holo_green_light"
        android:text="@string/find_calorie_intake"
        android:textColor="@android:color/background_light"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="457dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
</RelativeLayout>
